feat: migrate from poetry to uv (#11)
* chore: add bandit and twine to make check

* Fix ci error

* chore: update make file

* feat: migrate from poetry to uv

* chore: add uv lock file

* Fix ci error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,13 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: actions/checkout@v5
+      - uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
-      - name: Install and configure Poetry
-        run: |
-          pip install -U pip poetry
-          poetry config virtualenvs.create false
+      - uses: astral-sh/setup-uv@v6
+        with:
+          enable-cache: true
       - name: Run CI
-        run: make ci
+        run: uv run make ci
